--- a/diadev/apps/carbotracker/src/styles.scss
+++ b/diadev/apps/carbotracker/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
@@ -9,31 +8,71 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$node-primary-palette: (
+  100: #b1d9b1,
+  500: #49b046,
+  700: #68a063,
+  contrast: (
+    100: rgba(0, 0, 0, 0.87),
+    500: #ffffff,
+    700: #ffffff,
+  ),
+);
+
+$node-accent-palette: (
+  100: #cfd8dc,
+  500: #b0bec5,
+  700: #78909c,
+  contrast: (
+    100: rgba(0, 0, 0, 0.87),
+    500: rgba(0, 0, 0, 0.87),
+    700: #ffffff,
+  ),
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$carbotracker-primary: mat.define-palette(mat.$indigo-palette);
-$carbotracker-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$app-carbotracker-primary: mat.define-palette($node-primary-palette);
+$app-carbotracker-accent: mat.define-palette($node-accent-palette);
 
 // The warn palette is optional (defaults to red).
-$carbotracker-warn: mat.define-palette(mat.$red-palette);
+$app-carbotracker-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$carbotracker-theme: mat.define-light-theme((
-  color: (
-    primary: $carbotracker-primary,
-    accent: $carbotracker-accent,
-    warn: $carbotracker-warn,
+$app-carbotracker-node-light: mat.define-light-theme(
+  (
+    color: (
+      primary: $app-carbotracker-primary,
+      accent: $app-carbotracker-accent,
+      warn: $app-carbotracker-warn,
+    ),
   )
-));
+);
+
+$app-carbotracker-node-dark: mat.define-dark-theme(
+  (
+    color: (
+      primary: $app-carbotracker-primary,
+      accent: $app-carbotracker-accent,
+      warn: $app-carbotracker-warn,
+    ),
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($carbotracker-theme);
+@include mat.all-component-themes($app-carbotracker-node-dark);
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
