--- a/diadev/libs/ui/src/lib/fab-icon-button/fab-icon-button.component.html
+++ b/diadev/libs/ui/src/lib/fab-icon-button/fab-icon-button.component.html
@@ -1,7 +1,7 @@
 <button
-    mat-fab
-    [color]="color"
-    style="position: fixed; bottom: 1rem; right: 1rem;"
+  mat-fab
+  [color]="color"
+  style="position: fixed; bottom: 1rem; right: 1rem"
 >
-    <mat-icon>{{icon}}</mat-icon>
+  <mat-icon>{{ icon }}</mat-icon>
 </button>
