--- a/diadev/apps/carbotracker/src/styles.scss
+++ b/diadev/apps/carbotracker/src/styles.scss
@@ -76,3 +76,7 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+.diadev-dialog-overlay .mat-dialog-container {
+  padding: 0;
+}
