--- a/diadev/libs/products/src/lib/components/create-product/create-product.component.html
+++ b/diadev/libs/products/src/lib/components/create-product/create-product.component.html
@@ -1,4 +1,8 @@
-<diadev-toolbar title="Create product"></diadev-toolbar>
+<diadev-toolbar [enableBackNavigation]="true" title="create product">
+  <button routerLink="../" mat-icon-button>
+    <mat-icon> close </mat-icon>
+  </button>
+</diadev-toolbar>
 <form
   (ngSubmit)="onSubmit()"
   [formGroup]="this.productForm.getAsFormGroup()"
@@ -15,15 +19,13 @@
   <div
     style="display: flex; flex-direction: row; justify-content: space-around"
   >
-    <button mat-button mat-dialog-close type="button">Abort</button>
-    <button
-      [disabled]="(this.productFormIsValid | async) === false"
+    <diadev-fab-icon-button
+      [disabled]="(isProductFormValid | async) === false"
       mat-raised-button
       mat-dialog-close
       type="submit"
       color="primary"
-    >
-      Save
-    </button>
+      icon="save"
+    ></diadev-fab-icon-button>
   </div>
 </form>
