--- a/diadev/libs/products/src/lib/components/product-list/product-list.component.html
+++ b/diadev/libs/products/src/lib/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<diadev-toolbar title="Products"></diadev-toolbar>
+<diadev-toolbar title="products"></diadev-toolbar>
 <mat-list>
   <mat-list-item
     *ngFor="let product of products$ | async"
