fix add product

--- a/diadev/libs/ui/src/lib/fab-icon-button/fab-icon-button.component.html
+++ b/diadev/libs/ui/src/lib/fab-icon-button/fab-icon-button.component.html
@@ -3,6 +3,7 @@
   mat-fab
   [color]="color"
   style="position: fixed; bottom: 1rem; right: 1rem"
+  type="button"
 >
   <mat-icon>{{ icon }}</mat-icon>
 </button>
