--- a/diadev/libs/products/src/lib/components/create-product/create-product.component.html
+++ b/diadev/libs/products/src/lib/components/create-product/create-product.component.html
@@ -22,8 +22,7 @@
     <diadev-fab-icon-button
       [disabled]="(isProductFormValid | async) === false"
       mat-raised-button
-      mat-dialog-close
-      type="submit"
+      (click)="onSubmit()"
       color="primary"
       icon="save"
     ></diadev-fab-icon-button>
