--- a/diadev/libs/products/src/lib/components/create-product/create-product.component.html
+++ b/diadev/libs/products/src/lib/components/create-product/create-product.component.html
@@ -1,10 +1,14 @@
-<diadev-toolbar [enableBackNavigation]="true" title="create product">
-  <button routerLink="../" mat-icon-button>
+<diadev-toolbar
+  routerLink="../"
+  (clickBackNavigation)="onClickBackNavigation()"
+  [enableBackNavigation]="true"
+  title="create product"
+>
+  <button routerLink="../" (click)="onClose()" mat-icon-button>
     <mat-icon> close </mat-icon>
   </button>
 </diadev-toolbar>
 <form
-  (ngSubmit)="onSubmit()"
   [formGroup]="this.productForm.getAsFormGroup()"
   style="display: flex; flex-direction: column; padding: 1rem"
 >
@@ -22,8 +26,9 @@
     <diadev-fab-icon-button
       [disabled]="(isProductFormValid | async) === false"
       mat-raised-button
-      (click)="onSubmit()"
+      (click)="onSave()"
       color="primary"
+      routerLink="../"
       icon="save"
     ></diadev-fab-icon-button>
   </div>
