--- a/diadev/libs/products/src/lib/components/product-list/product-list.component.html
+++ b/diadev/libs/products/src/lib/components/product-list/product-list.component.html
@@ -2,10 +2,16 @@
 <mat-list>
   <mat-list-item
     *ngFor="let product of products$ | async"
+    (click)="onSelectProduct(product.id)"
     [routerLink]="product.id"
   >
     {{ product.name }}, {{ product.carbohydratesPer100Gram }}g Carbohydrates
   </mat-list-item>
 </mat-list>
-<diadev-fab-icon-button routerLink="create" color="primary" icon="add">
+<diadev-fab-icon-button
+  routerLink="create"
+  (click)="onCreate()"
+  color="primary"
+  icon="add"
+>
 </diadev-fab-icon-button>
