--- a/diadev/libs/meals/src/lib/components/current-meal/current-meal.component.html
+++ b/diadev/libs/meals/src/lib/components/current-meal/current-meal.component.html
@@ -1,15 +1,15 @@
 <diadev-toolbar [title]="''">
-  <button mat-icon-button (click)="onDeleteCurrentMeal()">
+  <button mat-icon-button>
     <mat-icon>delete</mat-icon>
   </button>
 </diadev-toolbar>
 <mat-list>
-  <mat-list-item
+  <!-- <mat-list-item
     *ngFor="let mealEntry of this.allMealEntries | async"
     [routerLink]="mealEntry.id"
   >
     {{ mealEntry.name }}
-  </mat-list-item>
+  </mat-list-item> -->
 </mat-list>
 
 <diadev-fab-icon-button routerLink="create" color="primary" icon="add">
