calculate meal entry

--- a/diadev/libs/meals/src/lib/components/current-meal/current-meal.component.html
+++ b/diadev/libs/meals/src/lib/components/current-meal/current-meal.component.html
@@ -9,7 +9,7 @@
     (click)="onSelectMealEntry(mealEntry.id)"
   >
     {{ mealEntry.amountInGramm }}gr {{ mealEntry.name }},
-    {{ mealEntry.carbohydratesPer100Gram }}g Carbohydrates
+    {{ mealEntry.amountOfCarbohydratesInGramm }}g Carbohydrates
   </mat-list-item>
 </mat-list>
 
